--- a/notebooks/characters.ipynb
+++ b/notebooks/characters.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "12a7a468",
+   "execution_count": null,
+   "id": "2f899964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Jun  1 2022, 06:36:29) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
