--- a/notebooks/reading_data.ipynb
+++ b/notebooks/reading_data.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "2f858198",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i 'python_functions/cleaning_csv.py'"
+    "%run -i 'python_files/cleaning_csv.py'"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e73a2dd5",
    "metadata": {},
@@ -245,7 +244,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dd6d8ab6",
    "metadata": {},
@@ -264,7 +262,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b47d1353",
    "metadata": {},
@@ -273,7 +270,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1d099534",
    "metadata": {},
@@ -327,7 +323,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e27cc31f",
    "metadata": {},
@@ -726,7 +721,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4bb681ea",
    "metadata": {},
@@ -893,7 +887,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d8a8d81b",
    "metadata": {},
@@ -932,8 +925,16 @@
    "name": "ironhack"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.12 (main, Jun  1 2022, 06:36:29) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
